EDGOAIPMH-122 Applied plugin