@@ -24,6 +24,15 @@ import static org.folio.edge.oaipmh.utils.Constants.VERB;
 import static org.folio.edge.oaipmh.utils.ResumptionTokenUtils.buildNewResumptionToken;
 import static org.folio.edge.oaipmh.utils.ResumptionTokenUtils.parseResumptionToken;
 
+import com.google.common.collect.Iterables;
+import io.vertx.core.MultiMap;
+import io.vertx.core.buffer.Buffer;
+import io.vertx.core.buffer.impl.BufferImpl;
+import io.vertx.core.http.HttpHeaders;
+import io.vertx.core.http.HttpServerRequest;
+import io.vertx.core.http.HttpServerResponse;
+import io.vertx.ext.web.RoutingContext;
+import io.vertx.ext.web.client.HttpResponse;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -33,11 +42,7 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.regex.Pattern;
-
-import io.vertx.core.MultiMap;
-import io.vertx.core.buffer.Buffer;
-import io.vertx.core.buffer.impl.BufferImpl;
-import io.vertx.ext.web.client.HttpResponse;
+import lombok.extern.slf4j.Slf4j;
 import org.folio.edge.core.Handler;
 import org.folio.edge.core.cache.Cache;
 import org.folio.edge.core.model.ClientInfo;
@@ -47,14 +52,6 @@ import org.folio.edge.core.utils.OkapiClient;
 import org.folio.edge.core.utils.OkapiClientFactory;
 import org.folio.edge.oaipmh.clients.ConsortiaTenantClient;
 import org.folio.edge.oaipmh.clients.OaiPmhOkapiClient;
-
-import com.google.common.collect.Iterables;
-
-import io.vertx.core.http.HttpHeaders;
-import io.vertx.core.http.HttpServerRequest;
-import io.vertx.core.http.HttpServerResponse;
-import io.vertx.ext.web.RoutingContext;
-import lombok.extern.slf4j.Slf4j;
 import org.folio.edge.oaipmh.utils.ResponseConverter;
 import org.openarchives.oai._2.ListRecordsType;
 import org.openarchives.oai._2.OAIPMH;
@@ -62,19 +59,23 @@ import org.openarchives.oai._2.ResumptionTokenType;
 
 @Slf4j
 public class OaiPmhHandler extends Handler {
-  /** Expected valid http status codes to be returned by repository logic */
-  private static final Set<Integer> EXPECTED_CODES = Set.of(SC_OK, SC_BAD_REQUEST, SC_NOT_FOUND, SC_UNPROCESSABLE_ENTITY, SC_SERVICE_UNAVAILABLE);
-  private static final String ERROR_FROM_REPOSITORY = "Error in the response from repository: status code - %s, response status message - %s %s";
+  /**
+   * Expected valid http status codes to be returned by repository logic.
+   */
+  private static final Set<Integer> EXPECTED_CODES = Set.of(SC_OK, SC_BAD_REQUEST, SC_NOT_FOUND,
+        SC_UNPROCESSABLE_ENTITY, SC_SERVICE_UNAVAILABLE);
+  private static final String ERROR_FROM_REPOSITORY = "Error in the response from repository: "
+        + "status code - %s, response status message - %s %s";
 
-  private Cache<List<String>> tenantsCache;
+  private final Cache<List<String>> tenantsCache;
 
   public OaiPmhHandler(SecureStore secureStore, OkapiClientFactory ocf) {
     super(secureStore, ocf);
     tenantsCache = new Cache.Builder<List<String>>()
-      .withTTL(TimeUnit.HOURS.toMillis(1))
-      .withNullValueTTL(0)
-      .withCapacity(100)
-      .build();
+          .withTTL(TimeUnit.HOURS.toMillis(1))
+          .withNullValueTTL(0)
+          .withCapacity(100)
+          .build();
   }
 
   protected void handle(RoutingContext ctx) {
@@ -89,25 +90,25 @@ public class OaiPmhHandler extends Handler {
       return;
     }
 
-    handleCommon(ctx, new String[0], new String[0] , (okapiClient, params) -> {
+    handleCommon(ctx, new String[0], new String[0], (okapiClient, params) -> {
       if (isListRequest(ctx)) {
         getTenants(okapiClient)
-          .thenAccept(list -> {
-            if (isEmpty(list)) {
-              notFound(ctx, "Tenants list is absent or empty");
-            } else if (isSingleTenantHarvesting(list)) {
-              new OaiPmhOkapiClient(okapiClient).call(request.params(), request.headers(),
-                response -> handleProxyResponse(ctx, response),
-                throwable -> oaiPmhFailureHandler(ctx, throwable));
-            } else {
-              ctx.request().params().set(CENTRAL_TENANT_ID, okapiClient.tenant);
-              performMultiTenantHarvesting(ctx, list.get(0));
-            }
-          });
+              .thenAccept(list -> {
+                if (isEmpty(list)) {
+                  notFound(ctx, "Tenants list is absent or empty");
+                } else if (isSingleTenantHarvesting(list)) {
+                  new OaiPmhOkapiClient(okapiClient).call(request.params(), request.headers(),
+                        response -> handleProxyResponse(ctx, response),
+                        throwable -> oaiPmhFailureHandler(ctx, throwable));
+                } else {
+                  ctx.request().params().set(CENTRAL_TENANT_ID, okapiClient.tenant);
+                  performMultiTenantHarvesting(ctx, list.getFirst());
+                }
+              });
       } else {
         new OaiPmhOkapiClient(okapiClient).call(request.params(), request.headers(),
-          response -> handleProxyResponse(ctx, response),
-          throwable -> oaiPmhFailureHandler(ctx, throwable));
+              response -> handleProxyResponse(ctx, response),
+              throwable -> oaiPmhFailureHandler(ctx, throwable));
       }
     });
   }
@@ -120,12 +121,13 @@ public class OaiPmhHandler extends Handler {
     var res = tenantsCache.get(okapiClient.tenant);
     if (isEmpty(res)) {
       return new ConsortiaTenantClient(okapiClient).getConsortiaTenants(null)
-        .toCompletionStage().toCompletableFuture()
-        .thenApply(l -> tenantsCache.put(okapiClient.tenant, l).value)
-        .exceptionally(throwable -> {
-          log.info("Returning current tenant instead of tenants list, reason: {}", throwable.getMessage());
-          return Collections.singletonList(okapiClient.tenant);
-        });
+            .toCompletionStage().toCompletableFuture()
+            .thenApply(l -> tenantsCache.put(okapiClient.tenant, l).value)
+            .exceptionally(throwable -> {
+              log.info("Returning current tenant instead of tenants list, reason: {}",
+                    throwable.getMessage());
+              return Collections.singletonList(okapiClient.tenant);
+            });
     }
     return CompletableFuture.completedFuture(res);
   }
@@ -136,9 +138,9 @@ public class OaiPmhHandler extends Handler {
 
   private boolean shouldStartHarvestingForNextTenant(Map<String, String> params) {
     return (params.containsKey(METADATA_PREFIX) && params.containsKey(TENANT_ID))
-      && (params.size() == 2
-        || (params.size() == 3 && (params.containsKey(FROM) || params.containsKey(UNTIL)))
-        || (params.size() == 4 && params.containsKey(FROM) && params.containsKey(UNTIL)));
+          && (params.size() == 2
+          || (params.size() == 3 && (params.containsKey(FROM) || params.containsKey(UNTIL)))
+          || (params.size() == 4 && params.containsKey(FROM) && params.containsKey(UNTIL)));
   }
 
   private void performMultiTenantHarvesting(RoutingContext ctx, String tenantId) {
@@ -151,8 +153,10 @@ public class OaiPmhHandler extends Handler {
       if (shouldStartHarvestingForNextTenant(resumptionTokenParams)) {
         request.params().remove(RESUMPTION_TOKEN);
         request.params().set(METADATA_PREFIX, resumptionTokenParams.get(METADATA_PREFIX));
-        ofNullable(resumptionTokenParams.get(FROM)).ifPresent(value -> request.params().set(FROM, value));
-        ofNullable(resumptionTokenParams.get(UNTIL)).ifPresent(value -> request.params().set(UNTIL, value));
+        ofNullable(resumptionTokenParams.get(FROM))
+              .ifPresent(value -> request.params().set(FROM, value));
+        ofNullable(resumptionTokenParams.get(UNTIL))
+              .ifPresent(value -> request.params().set(UNTIL, value));
       }
       var nextTenantId = resumptionTokenParams.get(TENANT_ID);
       ctx.request().params().set(TENANT_ID, nextTenantId);
@@ -163,24 +167,16 @@ public class OaiPmhHandler extends Handler {
   private void callToTenant(RoutingContext ctx, String tenant) {
     var request = ctx.request();
     getClient(ctx, tenant)
-      .thenAccept(client -> new OaiPmhOkapiClient(client).call(request.params(), request.headers(),
-        response -> handleProxyResponse(ctx, response),
-        throwable -> oaiPmhFailureHandler(ctx, throwable)));
-  }
-
-  private Optional<String> getNextTenant(List<String> list, String currentTenantId) {
-    log.info("Tenants list: {}", list);
-    var nextTenantIndex = list.indexOf(currentTenantId) + 1;
-    if (list.size() > nextTenantIndex) {
-      log.info("Next tenant: {}", list.get(nextTenantIndex));
-      return Optional.of(list.get(nextTenantIndex));
-    }
-    return Optional.empty();
+          .thenAccept(client -> new OaiPmhOkapiClient(client).call(request.params(),
+                request.headers(),
+                response -> handleProxyResponse(ctx, response),
+                throwable -> oaiPmhFailureHandler(ctx, throwable)));
   }
 
   /**
    * EDGE-OAI-PMH supports only text/xml and all its derivatives in Accept header.
-   * Empty Accept header implies any MIME type is accepted, same as Accept: *//*
+   * Empty Accept header implies any MIME type is accepted, same as Accept:
+   *//*
    *
    * Valid examples: text/xml, text/*, *//*, *\xml
    * NOT Valid examples: application/xml, application/*, test/json
@@ -190,22 +186,22 @@ public class OaiPmhHandler extends Handler {
    */
   private boolean supportedAcceptHeaders(HttpServerRequest request) {
     if (request.headers()
-      .contains(ACCEPT)) {
+          .contains(ACCEPT)) {
       final String supportedHeadersRegexp = "(text|\\*)\\s*/\\s*(xml|\\*)";
       final Pattern pattern = Pattern.compile(supportedHeadersRegexp);
       return request.headers()
-        .getAll(ACCEPT)
-        .stream()
-        .anyMatch(h -> pattern.matcher(h)
-          .find());
+            .getAll(ACCEPT)
+            .stream()
+            .anyMatch(h -> pattern.matcher(h)
+                  .find());
     }
     return true;
   }
 
   /**
-   * This method contains processing of oai-pmh-mod response in normal processing flow
+   * This method contains processing of oai-pmh-mod response in normal processing flow.
    *
-   * @param ctx      routing context
+   * @param ctx            routing context
    * @param oaiPmhResponse populated http-response
    */
   @Override
@@ -216,9 +212,12 @@ public class OaiPmhHandler extends Handler {
 
     if (EXPECTED_CODES.contains(httpStatusCode)) {
       edgeResponse.putHeader(HttpHeaders.CONTENT_TYPE, TEXT_XML);
-      // In case the repository logic already compressed the response, lets transfer header to avoid potential doubled compression
-      Optional<String> encodingHeader = ofNullable(oaiPmhResponse.getHeader(String.valueOf(HttpHeaders.CONTENT_ENCODING)));
-      encodingHeader.ifPresent(value -> edgeResponse.putHeader(HttpHeaders.CONTENT_ENCODING, value));
+      // In case the repository logic already compressed the response,
+      // lets transfer header to avoid potential doubled compression
+      Optional<String> encodingHeader = ofNullable(oaiPmhResponse
+            .getHeader(String.valueOf(HttpHeaders.CONTENT_ENCODING)));
+      encodingHeader.ifPresent(value -> edgeResponse.putHeader(
+            HttpHeaders.CONTENT_ENCODING, value));
       Buffer buffer = oaiPmhResponse.body();
       var oaipmh = ResponseConverter.getInstance().toOaiPmh(buffer.toString());
       if (isListRecords(oaipmh) && isResumptionTokenOnly(oaipmh.getListRecords())) {
@@ -235,10 +234,13 @@ public class OaiPmhHandler extends Handler {
         }
       }
     } else {
-      var message = String.format(ERROR_FROM_REPOSITORY, oaiPmhResponse.statusCode(), oaiPmhResponse.statusMessage(), oaiPmhResponse.bodyAsString());
+      var message = String.format(ERROR_FROM_REPOSITORY, oaiPmhResponse.statusCode(),
+            oaiPmhResponse.statusMessage(), oaiPmhResponse.bodyAsString());
       log.error(message);
       if (!ctx.response().ended()) {
-        ctx.response().setStatusCode(oaiPmhResponse.statusCode()).putHeader(HttpHeaders.CONTENT_TYPE, "text/plain").end(message);
+        ctx.response().setStatusCode(oaiPmhResponse.statusCode()).putHeader(
+              HttpHeaders.CONTENT_TYPE,
+              "text/plain").end(message);
       }
     }
   }
@@ -251,38 +253,45 @@ public class OaiPmhHandler extends Handler {
     callToTenant(ctx, parseResumptionToken(resumptionToken).get(TENANT_ID));
   }
 
-  private void processLastResponse(RoutingContext ctx, HttpServerResponse edgeResponse, OAIPMH oaipmh, Buffer buffer) {
+  private void processLastResponse(RoutingContext ctx, HttpServerResponse edgeResponse,
+                                   OAIPMH oaipmh, Buffer buffer) {
     var requestParams = ctx.request().params();
-    log.info("Last response, central tenant={}, current tenant={}", requestParams.get(CENTRAL_TENANT_ID), requestParams.get(TENANT_ID));
+    log.info("Last response, central tenant={}, current tenant={}",
+          requestParams.get(CENTRAL_TENANT_ID),
+          requestParams.get(TENANT_ID));
     if (isMultiTenantHarvesting(requestParams)) {
       getNextTenant(ctx, requestParams.get(CENTRAL_TENANT_ID), requestParams.get(TENANT_ID))
-        .thenAccept(optionalNextTenant -> {
-          if (optionalNextTenant.isPresent()) {
-            updateResumptionTokenValue(oaipmh, optionalNextTenant.get());
-            edgeResponse.end(BufferImpl.buffer(ResponseConverter.getInstance().convertToString(oaipmh)));
-          } else {
-            edgeResponse.end(buffer);
-          }
-        });
+            .thenAccept(optionalNextTenant -> {
+              if (optionalNextTenant.isPresent()) {
+                updateResumptionTokenValue(oaipmh, optionalNextTenant.get());
+                edgeResponse.end(BufferImpl.buffer(ResponseConverter.getInstance()
+                      .convertToString(oaipmh)));
+              } else {
+                edgeResponse.end(buffer);
+              }
+            });
     } else {
       edgeResponse.end(buffer);
     }
   }
 
-  private void processErrorResponse(RoutingContext ctx, HttpServerResponse edgeResponse, Buffer buffer) {
+  private void processErrorResponse(RoutingContext ctx, HttpServerResponse edgeResponse,
+                                    Buffer buffer) {
     var requestParams = ctx.request().params();
-    log.info("Error response, central tenant={}, current tenant={}", requestParams.get(CENTRAL_TENANT_ID), requestParams.get(TENANT_ID));
+    log.info("Error response, central tenant={}, current tenant={}",
+          requestParams.get(CENTRAL_TENANT_ID),
+          requestParams.get(TENANT_ID));
     if (isMultiTenantHarvesting(requestParams)) {
       getNextTenant(ctx, requestParams.get(CENTRAL_TENANT_ID), requestParams.get(TENANT_ID))
-        .thenAccept(optionalNextTenant -> {
-          if (optionalNextTenant.isPresent()) {
-            var nextTenant = optionalNextTenant.get();
-            requestParams.set(TENANT_ID, nextTenant);
-            callToTenant(ctx, nextTenant);
-          } else {
-            edgeResponse.end(buffer);
-          }
-        });
+            .thenAccept(optionalNextTenant -> {
+              if (optionalNextTenant.isPresent()) {
+                var nextTenant = optionalNextTenant.get();
+                requestParams.set(TENANT_ID, nextTenant);
+                callToTenant(ctx, nextTenant);
+              } else {
+                edgeResponse.end(buffer);
+              }
+            });
     } else {
       edgeResponse.end(buffer);
     }
@@ -292,63 +301,78 @@ public class OaiPmhHandler extends Handler {
     return nonNull(requestParams.get(CENTRAL_TENANT_ID)) && nonNull(requestParams.get(TENANT_ID));
   }
 
-  private CompletableFuture<Optional<String>> getNextTenant(RoutingContext ctx, String initialTenantId, String currentTenantId) {
+  private Optional<String> getNextTenant(List<String> list, String currentTenantId) {
+    log.info("Tenants list: {}", list);
+    var nextTenantIndex = list.indexOf(currentTenantId) + 1;
+    if (list.size() > nextTenantIndex) {
+      log.info("Next tenant: {}", list.get(nextTenantIndex));
+      return Optional.of(list.get(nextTenantIndex));
+    }
+    return Optional.empty();
+  }
+
+  private CompletableFuture<Optional<String>> getNextTenant(RoutingContext ctx,
+                                                            String initialTenantId,
+                                                            String currentTenantId) {
     return getClient(ctx, initialTenantId)
-      .thenCompose(this::getTenants)
-      .thenApply(list -> getNextTenant(list, currentTenantId));
+          .thenCompose(this::getTenants)
+          .thenApply(list -> getNextTenant(list, currentTenantId));
   }
 
   private void updateResumptionTokenValue(OAIPMH oaipmh, String nextTenant) {
     var newResumptionTokenValue = buildNewResumptionToken(oaipmh, nextTenant);
     if (isListRecords(oaipmh)) {
       var listRecords = oaipmh.getListRecords();
-      listRecords.setResumptionToken(isNull(listRecords.getResumptionToken()) ?
-        new ResumptionTokenType().withValue(newResumptionTokenValue) :
-        listRecords.getResumptionToken().withValue(newResumptionTokenValue));
+      listRecords.setResumptionToken(isNull(listRecords.getResumptionToken())
+            ? new ResumptionTokenType().withValue(newResumptionTokenValue) :
+            listRecords.getResumptionToken().withValue(newResumptionTokenValue));
     } else {
       var listIdentifiers = oaipmh.getListIdentifiers();
-      listIdentifiers.setResumptionToken(isNull(listIdentifiers.getResumptionToken()) ?
-        new ResumptionTokenType().withValue(newResumptionTokenValue) :
-        listIdentifiers.getResumptionToken().withValue(newResumptionTokenValue));
+      listIdentifiers.setResumptionToken(isNull(listIdentifiers.getResumptionToken())
+            ? new ResumptionTokenType().withValue(newResumptionTokenValue) :
+            listIdentifiers.getResumptionToken().withValue(newResumptionTokenValue));
     }
   }
 
   @Override
   protected void accessDenied(RoutingContext ctx, String msg) {
     log.error("accessDenied: " + msg);
-    super.accessDenied(ctx, "The access to repository is denied. Please contact administrator(s).");
+    super.accessDenied(ctx, "The access to repository is denied. "
+          + "Please contact administrator(s).");
   }
 
   @Override
   protected void requestTimeout(RoutingContext ctx, String msg) {
     log.error("requestTimeout: " + msg);
-    super.requestTimeout(ctx, "The repository cannot process request. Please try later or contact administrator(s).");
+    super.requestTimeout(ctx, "The repository cannot process request. "
+          + "Please try later or contact administrator(s).");
   }
 
   /**
-   * This handler-method for processing exceptional flow
+   * This handler-method for processing exceptional flow.
    *
-   * @param ctx current routing context
-   * @param throwable   throwable object
+   * @param ctx       current routing context
+   * @param throwable throwable object
    */
   private void oaiPmhFailureHandler(RoutingContext ctx, Throwable throwable) {
     log.error("Exception in calling OKAPI", throwable);
     if (throwable instanceof TimeoutException) {
       requestTimeout(ctx, throwable.getMessage());
     } else {
-      internalServerError(ctx, throwable != null? throwable.getMessage(): "");
+      internalServerError(ctx, throwable != null ? throwable.getMessage() : "");
     }
   }
 
   private void notAcceptableResponse(RoutingContext ctx, HttpServerRequest request) {
     String unsupportedType = request.headers()
-      .getAll(ACCEPT)
-      .stream()
-      .filter(value -> (!value.equals(TEXT_XML)))
-      .findFirst()
-      .orElse("");
+          .getAll(ACCEPT)
+          .stream()
+          .filter(value -> (!value.equals(TEXT_XML)))
+          .findFirst()
+          .orElse("");
     notAcceptable(ctx,
-      "Accept header must be \"text/xml\" for this request, but it is " + "\"" + unsupportedType + "\"" + ", can not send */*");
+          "Accept header must be \"text/xml\" for this request, but it is " + "\""
+                + unsupportedType + "\"" + ", can not send */*");
   }
 
   private boolean isListRecords(OAIPMH oaipmh) {
@@ -357,8 +381,8 @@ public class OaiPmhHandler extends Handler {
 
   private boolean isResumptionTokenOnly(ListRecordsType listRecordsType) {
     return listRecordsType.getRecords().isEmpty()
-      && nonNull(listRecordsType.getResumptionToken())
-      && !listRecordsType.getResumptionToken().getValue().isEmpty();
+          && nonNull(listRecordsType.getResumptionToken())
+          && !listRecordsType.getResumptionToken().getValue().isEmpty();
   }
 
   private boolean isFirstRequest(HttpServerRequest request) {
@@ -366,8 +390,12 @@ public class OaiPmhHandler extends Handler {
   }
 
   private boolean isLastResponse(OAIPMH oaipmh) {
-    return (nonNull(oaipmh.getListRecords()) && (isNull(oaipmh.getListRecords().getResumptionToken()) || oaipmh.getListRecords().getResumptionToken().getValue().isEmpty()))
-      || (nonNull(oaipmh.getListIdentifiers()) && (isNull(oaipmh.getListIdentifiers().getResumptionToken()) || oaipmh.getListIdentifiers().getResumptionToken().getValue().isEmpty()));
+    return (nonNull(oaipmh.getListRecords())
+          && (isNull(oaipmh.getListRecords().getResumptionToken())
+          || oaipmh.getListRecords().getResumptionToken().getValue().isEmpty()))
+          || (nonNull(oaipmh.getListIdentifiers())
+          && (isNull(oaipmh.getListIdentifiers().getResumptionToken())
+          || oaipmh.getListIdentifiers().getResumptionToken().getValue().isEmpty()));
   }
 
   private boolean isErrorResponse(OAIPMH oaipmh) {
@@ -384,6 +412,6 @@ public class OaiPmhHandler extends Handler {
     }
     final OkapiClient client = ocf.getOkapiClient(tenantId);
     return iuHelper.fetchToken(client, clientInfo.salt, tenantId, clientInfo.username)
-      .map(token -> client).toCompletionStage().toCompletableFuture();
+          .map(token -> client).toCompletionStage().toCompletableFuture();
   }
 }
