@@ -4,13 +4,12 @@ import static org.apache.commons.lang3.ObjectUtils.isNotEmpty;
 
 import io.vertx.core.Future;
 import io.vertx.core.MultiMap;
-import lombok.extern.slf4j.Slf4j;
-import org.folio.edge.core.utils.OkapiClient;
-import org.folio.rest.jaxrs.model.UserTenantCollection;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
+import lombok.extern.slf4j.Slf4j;
+import org.folio.edge.core.utils.OkapiClient;
+import org.folio.rest.jaxrs.model.UserTenantCollection;
 
 @Slf4j
 public class ConsortiaTenantClient extends OkapiClient {
@@ -24,14 +23,15 @@ public class ConsortiaTenantClient extends OkapiClient {
 
   public Future<List<String>> getConsortiaTenants(MultiMap headers) {
     return this.get(okapiURL + USER_TENANTS_ENDPOINT_LIMIT_1, tenant, headers)
-      .map(resp -> resp.bodyAsJson(UserTenantCollection.class))
-      .compose(collection -> processUserTenants(collection, headers));
+          .map(resp -> resp.bodyAsJson(UserTenantCollection.class))
+          .compose(collection -> processUserTenants(collection, headers));
   }
 
-  private Future<List<String>> processUserTenants(UserTenantCollection userTenantCollection, MultiMap headers) {
+  private Future<List<String>> processUserTenants(UserTenantCollection userTenantCollection,
+                                                  MultiMap headers) {
     var userTenants = userTenantCollection.getUserTenants();
     if (isNotEmpty(userTenants)) {
-      var centralTenantId = userTenants.get(0).getCentralTenantId();
+      var centralTenantId = userTenants.getFirst().getCentralTenantId();
       if (Objects.equals(tenant, centralTenantId)) {
         var consortiaClient = new ConsortiaClient(okapiClient);
         consortiaClient.setToken(getToken());
